# Synthese-image-SALANON-DIETSCH

./: CMakeLists.txt  README.md  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
lib/stb_image/: stb_image.cpp
res/shaders/: basic.frag  basic.vert
save/: sauvegarde 1
src/: CubesExistants.cpp  CubesExistants.h  Curseur.cpp  Curseur.h  FreeflyCamera.cpp  FreeflyCamera.hpp  Texture.cpp  Texture.h  TrackballCamera.cpp  TrackballCamera.hpp  app.cpp  app.h  cube.cpp  cube.h  main.cpp  radialBasicFonction.cpp  radialBasicFonction.hpp  radialBasisFonction.cpp  radialBasisFonction.hpp  save.cpp  save.h  shader.cpp  shader.h
